fix(history): set a max width for the formats to prevent the history from becoming too big

--- a/src/index.scss
+++ b/src/index.scss
@@ -83,6 +83,10 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
+[data-testid=table-element] {
+  overflow: hidden;
+}
+
 textarea {
   font-size: unset;
 }
